# arcadia-os

./: .gitignore  Cargo.toml  LICENSE  Makefile  PHASE_B_REPORT.md  README.md  linker.ld  start.ps1
.cargo/: config.toml
boot/: Cargo.toml
boot/src/: lib.rs  uefi_main.rs
editor/: Cargo.toml
editor/src/: editor_core.rs  lib.rs
flux/: Cargo.toml
flux/src/: lib.rs
kernel/: Cargo.toml
kernel/src/: lib.rs  panic.rs  serial.rs  version.rs  vga_buffer.rs
kernel/src/arch/: boot64.asm  boot_entry.rs  gdt.rs  idt.rs  mod.rs
kernel/src/block/: ata.rs  mod.rs
kernel/src/drivers/: mod.rs
kernel/src/drivers/ata/: mod.rs
kernel/src/drivers/pci/: mod.rs
kernel/src/elf/: mod.rs
kernel/src/fs/: mbr.rs  mod.rs
kernel/src/fs/fat32/: bpb.rs  dir.rs  fat.rs  mod.rs
kernel/src/fs/vfs/: mod.rs
kernel/src/interrupts/: mod.rs
kernel/src/memory/: heap.rs  mod.rs  physmem.rs  vmm.rs
kernel/src/process/: context.rs  init.rs  mod.rs  pcb.rs  syscall.rs
kernel/src/sysinfo/: cpu.rs  memory.rs  mod.rs
kernel/src/terminal/: mod.rs
kernel/src/time/: mod.rs
libs/shared/: Cargo.toml
libs/shared/src/: config.rs  error.rs  lib.rs  logging.rs
tools/: add_to_fat32.py  gen_init.py  test_phase_g.py  test_phase_g2.py
